# Kloonorio

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  renderdoc_settings.cap  shell.nix
.cargo/: config.toml
assets/data/: base.items.ron  base.recipes.ron  base.resources.ron  base.structures.ron  start.recipes.ron  start.structures.ron  structures.ron
kloonorio_core/: Cargo.toml
kloonorio_core/src/: discrete_rotation.rs  drop.rs  health.rs  item.rs  lib.rs  mineable.rs  recipe.rs  structure.rs  tile_occupants.rs  types.rs
kloonorio_core/src/inventory/: inventory_params.rs  mod.rs  stack.rs  util.rs
kloonorio_core/src/structure_components/: assembler.rs  burner.rs  inserter.rs  miner.rs  mod.rs  smelter.rs  transport_belt.rs
kloonorio_render/: Cargo.toml
kloonorio_render/src/: building_animation.rs  inserter.rs  isometric_sprite.rs  item_textures.rs  lib.rs  transport_belt.rs
kloonorio_terrain/: Cargo.toml
kloonorio_terrain/src/: debug.rs  lib.rs  terrain_generator.rs
kloonorio_ui/: Cargo.toml
kloonorio_ui/src/: building_ui.rs  character_ui.rs  crafting_queue_ui.rs  drag_and_drop.rs  healthbar.rs  hotbar.rs  icon.rs  interact_ui.rs  inventory_grid.rs  lib.rs  picker.rs  tooltip.rs  util.rs
kloonorio_ui/src/debug/: mod.rs
src/: assembler.rs  biter.rs  building_ui.rs  burner.rs  camera.rs  character_ui.rs  craft.rs  discrete_rotation.rs  drag_and_drop.rs  entity_tile_tracking.rs  health.rs  inserter.rs  interact.rs  intermediate_loader.rs  inventory.rs  inventory_grid.rs  isometric_sprite.rs  item_loader.rs  loading.rs  main.rs  miner.rs  picker.rs  placeable.rs  player.rs  player_control.rs  player_movement.rs  recipe_loader.rs  scene_setup.rs  shoot.rs  smelter.rs  structure_loader.rs  terrain.rs  transport_belt.rs  types.rs  util.rs  ysort.rs
src/builder/: inserter_builder.rs  miner_builder.rs  mod.rs  transport_belt_builder.rs
src/structure_components/: assembler.rs  burner.rs  inserter.rs  miner.rs  mod.rs  smelter.rs  transport_belt.rs
src/terrain/: mod.rs  terrain_generator.rs
src/ui/: building_ui.rs  character_ui.rs  crafting_queue_ui.rs  drag_and_drop.rs  hotbar.rs  icon.rs  inventory_grid.rs  mod.rs  tooltip.rs
src/ui/debug/: mod.rs
web/: index.html
