[package]
name = "kloonorio"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.8", features = ["wayland", "trace"] }
noise = "0.8"
iyes_loopless = "0.7"
bevy-inspector-egui = "0.13"
bevy_ecs_tilemap = "0.8"
tracing = "0.1"
bevy_egui = "0.16"
rand = "0.8"
ndarray = "0.15"
futures-lite = "1.12.0"
crossbeam-channel = "0.5"
egui = "0.19"
bevy_rapier2d = { version = "0.17.0", features = ["wasm-bindgen"] }
fast_poisson = "0.5.2"
ahash = "0.8.1"
rand_chacha = "0.3.1"
rand_xoshiro = "0.6.0"
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
