[package]
name = "kloonorio"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.12", features = ["wayland", "trace"] }
noise = "0.8"
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
tracing = "0.1"
bevy_egui = "0.23"
rand = "0.8"
ndarray = "0.15"
futures-lite = "2.0"
crossbeam-channel = "0.5"
egui = "0.23"
bevy_rapier2d = { version = "0.23.0", features = ["wasm-bindgen"] }
fast_poisson = "1.0"
ahash = "0.8"
rand_chacha = "0.3"
rand_xoshiro = "0.6"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
bevy-inspector-egui = "0.21.0"
anyhow = "1.0.75"
thiserror = "1.0.50"

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
proptest = "1.0.0"
tokio = { version = "1.21.2", features = ["macros", "rt"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
