[workspace]
members = [
    "kloonorio_core",
    "kloonorio_render",
    "kloonorio_terrain",
    "kloonorio_ui",
]

[package]
name = "kloonorio"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
kloonorio_core = { path = "kloonorio_core" }
kloonorio_render = { path = "kloonorio_render" }
kloonorio_terrain = { path = "kloonorio_terrain" }
kloonorio_ui = { path = "kloonorio_ui" }
bevy = { workspace = true }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
bevy_egui = "0.23"
tracing = { workspace = true }
serde = { workspace = true }
rand = "0.8"
rand_xoshiro = "0.6"
futures-lite = "2.0"
bevy_rapier2d = { version = "0.23.0", features = ["wasm-bindgen"] }
ron = "0.8"
anyhow = "1.0.75"
thiserror = "1.0.50"

[dev-dependencies]
proptest = "1.4.0"
tokio = { version = "1.21.2", features = ["macros", "rt"] }
proptest-state-machine = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bevy = { version = "0.12", features = ["wayland", "trace"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
