[package]
name = "kloonorio_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
rand = "0.8.5"
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest-state-machine = "0.1.0"
proptest = "1.4.0"
